<resources>
    <string name="app_name">工具</string>
    <string name="first_tab">首页</string>
    <string name="first_video">视频</string>
    <string name="discorve_tab">发现</string>
    <string name="message_tab">信息</string>
    <string name="set_tab">我的</string>
    <string name="login_name">QQ号/手机号/邮箱</string>
    <string name="login_password">密码</string>
    <string name="login_login">登 陆</string>
    <string name="login_qq">QQ</string>
    <string name="login_condition">登陆即代表阅读并同意服务条款</string>
    <string name="login_forgit">忘记密码</string>
    <string name="login_regist">新用户注册</string>
    <string name="login_username_password">账号或密码错误</string>
    <string name="regist_suceess">注册成功</string>
    <string name="regist_fail">注册失败</string>
    <string name="username_password_null">账号或密码不能为空</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ptr_pull_to_refresh">Pull down to refresh</string>
    <string name="ptr_loading">loading...</string>
    <string name="ptr_updated">Updated</string>
</resources>
