<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar_layout"
        />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:layout_above="@+id/ll_main"
        >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/cBgNormal"
        android:paddingTop="1px">

      <com.example.mayn.myapp.UI.TabButton
          android:id="@+id/first_tab"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          app:src="@mipmap/tab_everyone1"
          app:srcCheck="@mipmap/tab_everyone2"
          app:text="@string/first_tab"
          app:textColor="@color/cTabNoCheck"
         />


        <com.example.mayn.myapp.UI.TabButton
            android:id="@+id/discorve_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:src="@mipmap/tab_live1"
            app:srcCheck="@mipmap/tab_live2"
            app:text="@string/discorve_tab"
            app:textColor="@color/cTabNoCheck" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.example.mayn.myapp.UI.TabButton
                android:id="@+id/message_tab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:src="@mipmap/tab_message1"
                app:srcCheck="@mipmap/tab_message2"
                app:text="@string/message_tab"
                app:textColor="@color/cTabNoCheck" />

            <!--<TextView-->
                <!--android:id="@+id/tvbadage"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:layout_marginStart="10dp"-->
                <!--android:layout_marginTop="3dp"-->
                <!--android:background="@drawable/shape_badge"-->
                <!--android:gravity="center"-->
                <!--android:padding="1dp"-->
                <!--android:paddingEnd="3dp"-->
                <!--android:paddingStart="3dp"-->
                <!--android:textColor="@color/cWhite"-->
                <!--android:textSize="8sp"-->
                <!--android:visibility="gone" />-->
        </FrameLayout>


        <com.example.mayn.myapp.UI.TabButton
            android:id="@+id/set_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:src="@mipmap/tab_settings1"
            app:srcCheck="@mipmap/tab_settings2"
            app:text="@string/set_tab"
            app:textColor="@color/cTabNoCheck" />


    </LinearLayout>
    
</RelativeLayout>